[CORE] Opció 6 working

--- a/Playlist_2018_-_Summer_Hits_2018_(Best_Summer_Songs)_♬♫_(RM©_Playlist_2019_-_Playlist_2020).html
+++ b/Playlist_2018_-_Summer_Hits_2018_(Best_Summer_Songs)_♬♫_(RM©_Playlist_2019_-_Playlist_2020).html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>PlaylistHTML</title>
+<title>LSTubHTML</title>
 <meta name="author" content="Albert Ferrando Garrido - albert.ferrando.2016 & Bernat Rovirosa Roca - bernat.rovirosa.2016">
 </head>
 <body>
-<h1>Playlist 2018 - Summer Hits 2018 (Best Summer Songs) ♬♫ (RM© Playlist 2019 - Playlist 2020)</h1>
+<h1>Playlist 2018 - Summer Hits 2018 (Best Summer Songs) ♬♫ (RM© Playlist 2019 - Playlist 2020): 120 videos</h1>
 <table><tr>
 <td>
 <h4>Maroon 5 - Girls Like You ft. Cardi B</h4>
